@@ -5,6 +5,25 @@
 # 	java
 #	elasticsearch with apt_source and key
 
+# Add options
+echo '-XX:+UseConcMarkSweepGC >> /etc/elasticsearch/jvm.options
+echo '-XX:CMSInitiatingOccupancyFraction=75 >> /etc/elasticsearch/jvm.options
+echo '-XX:+UseCMSInitiatingOccupancyOnly >> /etc/elasticsearch/jvm.options
+echo '-XX:+DisableExplicitGC >> /etc/elasticsearch/jvm.options
+echo '-XX:+AlwaysPreTouch >> /etc/elasticsearch/jvm.options
+echo '-server >> /etc/elasticsearch/jvm.options
+echo '-Xss1m >> /etc/elasticsearch/jvm.options
+echo '-Djava.awt.headless=true >> /etc/elasticsearch/jvm.options
+echo '-Dfile.encoding=UTF-8 >> /etc/elasticsearch/jvm.options
+echo '-Djna.nosys=true >> /etc/elasticsearch/jvm.options
+echo '-Djdk.io.permissionsUseCanonicalPath=true >> /etc/elasticsearch/jvm.options
+echo '-Dio.netty.noUnsafe=true >> /etc/elasticsearch/jvm.options
+echo '-Dio.netty.noKeySetOptimization=true >> /etc/elasticsearch/jvm.options
+echo '-Dio.netty.recycler.maxCapacityPerThread=0 >> /etc/elasticsearch/jvm.options
+echo '-Dlog4j.shutdownHookEnabled=false >> /etc/elasticsearch/jvm.options
+echo '-Dlog4j2.disable.jmx=true >> /etc/elasticsearch/jvm.options
+echo '-Dlog4j.skipJansi=true >> /etc/elasticsearch/jvm.options
+echo '-XX:+HeapDumpOnOutOfMemoryError >> /etc/elasticsearch/jvm.options
 # Set available java memory
 MEMGIGS=$(awk '/MemTotal/{printf "%.0f", $2 / 1024**2}' /proc/meminfo)
 if [ "$MEMGIGS" -gt 32 ]
